<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <LinearLayout
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:src="@drawable/module_editor_ic_undo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="30dp"
            android:text="@string/register_activity_name"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/register_toolbar"
        android:hint="账户"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:inputType="textVisiblePassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:layout_below="@id/register_password"
        android:layout_marginBottom="64dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cycle_button_style"
        android:enabled="true"
        android:text="@string/action_register"
        />
    <ProgressBar
        android:id="@+id/register_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="30dp"
        android:maxHeight="30dp"
        android:maxWidth="30dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="#00d8a0"
        android:indeterminate="false"
        android:visibility="gone"
        />
</RelativeLayout>